<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_simon"
    tools:context=".MainActivity">


        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/PurpleSimon"
            android:textSize="25sp"
            android:textStyle="bold"
            android:id="@+id/welcome_to"/>

        <TextView
            android:shadowColor="@color/PurpleSimon"
            android:shadowRadius="15"
            android:id="@+id/simon_says"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_to"
            android:layout_marginTop="1dp"
            android:textColor="@color/YellowSimon"
            android:gravity="center"
            android:text="@string/simon_says"
            android:textAllCaps="true"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_title"
            android:layout_below="@id/simon_says"
            android:layout_marginTop="1dp"
            android:textAllCaps="true"
            android:padding="1dp"
            android:textColor="@color/PurpleSimon"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:id="@+id/game"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/game"
            android:id="@+id/logo"
            android:padding="1dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/logo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_below="@id/logo"
            android:layout_marginHorizontal="100dp"
            android:textColor="@color/White"
            android:text="@string/new_game_button"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/shape_selector_pink"
            android:id="@+id/newGame_btn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_below="@id/newGame_btn"
            android:text="@string/score_button"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:layout_marginHorizontal="100dp"
            android:textStyle="bold"
            android:background="@drawable/shape_selector_blue"
            android:id="@+id/score_btn"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/score_btn"
            android:id="@+id/logo_sound"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo_sound"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:text="@string/exit_button"
            android:textSize="20sp"
            android:textColor="@color/White"
            android:gravity="center"
            android:layout_marginHorizontal="100dp"
            android:textStyle="bold"
            android:background="@drawable/shape_selector_gray"
            android:id="@+id/exit_btn"/>

</RelativeLayout>