<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_simon"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".ScoreActivity">

    <TextView
        android:id="@+id/title_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:padding="5dp"
        android:gravity="center"
        android:shadowColor="@color/PurpleSimon"
        android:shadowRadius="15"
        android:text="@string/table_score"
        android:textColor="@color/YellowSimon"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.2"
        android:padding="5dp"
        android:weightSum="2">

        <Spinner
            android:id="@+id/spinnerBoard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinnerDifficult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="3dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/name"
            android:textColor="@color/PurpleSimon"
            android:layout_marginHorizontal="1dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/rank"
            android:gravity="center"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <TextView
            android:textColor="@color/PurpleSimon"
            android:layout_marginHorizontal="1dp"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/name"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <TextView
            android:textColor="@color/PurpleSimon"
            android:gravity="center"
            android:layout_marginHorizontal="1dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/score_button"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView_records"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="3.5"
        android:divider="@color/BlueSimon"
        android:dividerHeight="3dp">

    </ListView>

    <Button

        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_game_screen_button"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="100dp"
        android:textColor="@color/White"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:background="@drawable/shape_selector_gray"
        android:id="@+id/back_btn"/>
</LinearLayout>