<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:textColor="@color/PurpleSimon"
            android:layout_marginHorizontal="1dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/rank"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:id="@+id/rank_lbl"/>

        <TextView
            android:textColor="@color/PurpleSimon"
            android:gravity="center"
            android:layout_marginHorizontal="1dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/name"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:id="@+id/name_lbl"/>

        <TextView
            android:textColor="@color/PurpleSimon"
            android:gravity="center"
            android:layout_marginHorizontal="1dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/score_button"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:id="@+id/score_lbl"/>

    </LinearLayout>
</RelativeLayout>